--- a/DigiTriadLab/app/src/main/res/values/colors.xml
+++ b/DigiTriadLab/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#4CAF50</color>
+    <color name="warning">#d50000</color>
+    <color name="done">#00c853</color>
+    <color name="scheduled">#ffab00</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#212121</color>
 </resources>
