--- a/DigiTriadLab/app/src/main/res/layout/activity_main.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,12 @@
         android:id="@+id/recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/list_item"
+        tools:listitem="@layout/experiment_list_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="@dimen/small_padding" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
