--- a/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewExperimentActivity">
+    tools:context=".views.NewExperimentActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/codename_input_layout"
@@ -52,6 +52,270 @@
             android:inputType="textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/wifi_title"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wifi_configuration"
+        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/big_padding"
+        android:layout_marginTop="@dimen/big_padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description_input_layout"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/wifi_active_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/wifi_title"
+        app:layout_constraintEnd_toStartOf="@id/wifi_inactive_input_layout"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/active_time"
+        >
+
+        <EditText
+            android:id="@+id/wifi_active"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/big_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/wifi_inactive_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/wifi_title"
+        app:layout_constraintStart_toEndOf="@id/wifi_active_input_layout"
+        app:layout_constraintEnd_toStartOf="@id/wifi_windows_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/inactive_time">
+
+        <EditText
+            android:id="@+id/wifi_inactive"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/wifi_windows_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/wifi_title"
+        app:layout_constraintStart_toEndOf="@id/wifi_inactive_input_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/windows">
+
+        <EditText
+            android:id="@+id/wifi_windows"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/big_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/bluetooth_title"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bluetooth_configuration"
+        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/big_padding"
+        android:layout_marginTop="@dimen/big_padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/wifi_active_input_layout"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_active_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_active_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_active_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/active_time"
+        >
+
+        <EditText
+            android:id="@+id/bluetooth_active"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/big_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_inactive_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_inactive_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_inactive_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/inactive_time">
+
+        <EditText
+            android:id="@+id/bluetooth_inactive"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_windows_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_windows_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_windows_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/windows">
+
+        <EditText
+            android:id="@+id/bluetooth_windows"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/big_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/bluetooth_le_title"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/bluetooth_le_configuration"
+        android:textColor="@color/black"
+        android:layout_marginStart="@dimen/big_padding"
+        android:layout_marginTop="@dimen/big_padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_active_input_layout"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_le_active_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_le_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_active_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_active_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/active_time"
+        >
+
+        <EditText
+            android:id="@+id/bluetooth_le_active"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/big_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_le_inactive_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_le_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_inactive_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_inactive_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/inactive_time">
+
+        <EditText
+            android:id="@+id/bluetooth_le_inactive"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/small_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/bluetooth_le_windows_input_layout"
+        android:layout_marginTop="@dimen/small_padding"
+
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_le_title"
+        app:layout_constraintStart_toStartOf="@id/wifi_windows_input_layout"
+        app:layout_constraintEnd_toEndOf="@id/wifi_windows_input_layout"
+
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/windows">
+
+        <EditText
+            android:id="@+id/bluetooth_le_windows"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/big_padding"
+            android:layout_marginStart="@dimen/small_padding"
+            style="@android:style/Widget.Material.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/save_button"
         style="@style/Widget.MaterialComponents.Button"
@@ -59,12 +323,42 @@
         android:layout_height="64dp"
         android:layout_marginEnd="@dimen/big_padding"
         android:layout_marginStart="@dimen/big_padding"
-        android:layout_marginBottom="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/small_padding"
         android:text="@string/save"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+
+    <Switch
+        android:id="@+id/wifi_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/big_padding"
+        android:checked="true"
+        app:layout_constraintBottom_toBottomOf="@id/wifi_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/wifi_title" />
+
+    <Switch
+        android:id="@+id/bluetooth_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/big_padding"
+        android:checked="true"
+        app:layout_constraintBottom_toBottomOf="@id/bluetooth_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bluetooth_title" />
+
+    <Switch
+        android:id="@+id/bluetooth_le_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/big_padding"
+        android:checked="true"
+        app:layout_constraintBottom_toBottomOf="@id/bluetooth_le_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bluetooth_le_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
