--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -36,6 +36,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/experiment_description"/>
 
+        <Button
+            android:id="@+id/add_run_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:paddingEnd="5dp"
+            android:paddingStart="12dp"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginEnd="@dimen/big_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/runs_title"
+            app:layout_constraintBottom_toBottomOf="@id/runs_title"
+            app:icon="@drawable/ic_baseline_add_24"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
+
         <View
             android:id="@+id/separator"
             android:layout_width="match_parent"
@@ -44,7 +59,7 @@
             android:layout_marginStart="@dimen/small_padding"
             android:layout_marginEnd="@dimen/small_padding"
             android:layout_marginTop="@dimen/small_padding"
-            app:layout_constraintTop_toBottomOf="@id/runs_title"/>
+            app:layout_constraintTop_toBottomOf="@id/add_run_button"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/run_recyclerview"
