--- a/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_new_experiment.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/codename">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/experiment_codename"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/description">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/experiment_description"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:hint="@string/active_time"
         >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/wifi_active"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/inactive_time">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/wifi_inactive"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/windows">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/wifi_windows"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +165,7 @@
         android:hint="@string/active_time"
         >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_active"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +190,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/inactive_time">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_inactive"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -215,7 +215,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/windows">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_windows"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -253,7 +253,7 @@
         android:hint="@string/active_time"
         >
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_le_active"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -278,7 +278,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/inactive_time">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_le_inactive"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -303,7 +303,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/windows">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/bluetooth_le_windows"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -321,15 +321,14 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:layout_marginEnd="@dimen/big_padding"
         android:layout_marginStart="@dimen/big_padding"
+        android:layout_marginEnd="@dimen/big_padding"
         android:layout_marginBottom="@dimen/small_padding"
         android:text="@string/save"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Switch
         android:id="@+id/wifi_switch"
