--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
+        <ImageView
+            android:id="@+id/qr_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/copy_experiment" />
+
         <TextView
             android:id="@+id/experiment_description"
             android:layout_width="match_parent"
@@ -22,7 +31,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/qr_container" />
 
         <TextView
             android:id="@+id/runs_title"
