--- a/DigiTriadLab/app/src/main/res/layout/activity_main.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,14 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:contentDescription="@string/add_word"
-        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        android:src="@drawable/ic_baseline_add_24"/>
+        android:backgroundTint="@color/colorAccent"
+        android:contentDescription="@string/add_experiment"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
