--- a/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_experiment_detail.xml
@@ -70,8 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/runs_title"
             app:layout_constraintBottom_toBottomOf="@id/runs_title"
-            app:icon="@drawable/ic_baseline_add_24"
-            style="@style/Widget.AppCompat.Button.Borderless"/>
+            app:icon="@drawable/ic_baseline_add_24" />
 
         <View
             android:id="@+id/separator"
