--- a/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
+++ b/DigiTriadLab/app/src/main/res/layout/activity_run_detail.xml
@@ -15,6 +15,7 @@
         android:indeterminateTint="@color/yellow"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/records_title"
         style="@style/TextAppearance.MaterialComponents.Headline5"
@@ -120,31 +121,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/wifi_samples_container"
         app:layout_constraintEnd_toStartOf="@id/sensors_samples_container" >
+
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/bluetooth_le_count"
+                style="@style/TextAppearance.MaterialComponents.Headline4"
                 android:layout_width="match_parent"
-                android:textAlignment="center"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/bluetooth_le_label"
                 android:layout_marginStart="@dimen/small_padding"
                 android:layout_marginEnd="@dimen/small_padding"
-                style="@style/TextAppearance.MaterialComponents.Headline4"/>
+                android:textAlignment="center"
+                app:layout_constraintBottom_toTopOf="@id/bluetooth_le_label"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/bluetooth_le_label"
+                style="@style/TextAppearance.MaterialComponents.Headline5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="@string/bluetooth_le"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="@dimen/big_padding"
                 android:layout_marginStart="@dimen/big_padding"
                 android:layout_marginEnd="@dimen/big_padding"
-                style="@style/TextAppearance.MaterialComponents.Headline5" />
+                android:layout_marginBottom="@dimen/big_padding"
+                android:text="@string/bluetooth_le"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
@@ -189,6 +192,46 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cell_samples_container"
+        android:layout_width="0dp"
+        android:layout_height="160dp"
+        android:layout_margin="@dimen/big_padding"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_le_samples_container"
+        app:layout_constraintEnd_toEndOf="@id/bluetooth_le_samples_container" >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
+            <TextView
+                android:id="@+id/cell_count"
+                android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/cell_label"
+                android:layout_marginStart="@dimen/small_padding"
+                android:layout_marginEnd="@dimen/small_padding"
+                style="@style/TextAppearance.MaterialComponents.Headline4"/>
+
+            <TextView
+                android:id="@+id/cell_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="@string/cell"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="@dimen/big_padding"
+                android:layout_marginStart="@dimen/big_padding"
+                android:layout_marginEnd="@dimen/big_padding"
+                style="@style/TextAppearance.MaterialComponents.Headline5" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
 
     <Button
         android:id="@+id/export_button"
